Fixed serious style problem on firefox browser shadow dom doesn't work on firefox...

--- a/src/content/display/style/error.styl
+++ b/src/content/display/style/error.styl
@@ -1,6 +1,6 @@
 @import 'common.styl';
 
-.container {
+#error-container {
     width: 100%;
     height: 100%;    
     text-align: center;    
@@ -10,7 +10,7 @@
     justify-content: center;
 	justify-items: center;
 
-    .icon {
+    .edge-translate-icon {
         text-align: center;
         width: 150px;
         height: 150px;
